Closed Bug 474700 Opened 16 years ago Closed 16 years ago

"ASSERTION: Invalid (negative) scale factor" with <svg:filter>, widths and heights

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: jruderman, Assigned: longsonr)

References

Details

(Keywords: assertion, testcase, verified1.9.1)

Attachments

(2 files)

Attached image testcase
###!!! ASSERTION: Invalid (negative) scale factor: 'sy >= 0.0', file ../../../../dist/include/thebes/gfxRect.h, line 190
Attached patch patchSplinter Review
Assignee: nobody → longsonr
Attachment #358300 - Flags: superreview?(roc)
Attachment #358300 - Flags: review?(roc)
OS: Mac OS X → All
Hardware: x86 → All
Attachment #358300 - Flags: superreview?(roc)
Attachment #358300 - Flags: superreview+
Attachment #358300 - Flags: review?(roc)
Attachment #358300 - Flags: review+
Keywords: checkin-needed
Whiteboard: [needs landing]
Pushed to trunk: http://hg.mozilla.org/mozilla-central/rev/5305114469ab Robert, do you think we should take this in 1.9.1? I'm inclined to. I checked in Jesse's test as a crashtest.
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing]
Attachment #358300 - Flags: approval1.9.1?
Comment on attachment 358300 [details] [diff] [review] patch Simple fix to avoid encountering an assertion later.
Attachment #358300 - Flags: approval1.9.1? → approval1.9.1+
Keywords: checkin-needed
Whiteboard: [needs 191 landing]
Apparently this landed on 1.9.1 some time ago as part of bug 461863.
Whiteboard: [needs 191 landing]
verified FIXED with attached testcase using debug builds: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre) Gecko/20090608 Shiretoko/3.5pre ID:20090608122057 and Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090608 Minefield/3.6a1pre ID:20090608122028
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: