Bug 474700. Avoid negative-sized filter areas. r+sr=roc

--HG--
extra : rebase_source : 50e69812961c0787571273ca8e4326c48e7a83e6